--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
 
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(3, 138px);
+  /* grid-template-columns: repeat(3, 138px); */
   grid-auto-rows: 1fr;
   gap: 16px 16px;
   margin: 0 auto;
